# game

./: .gitignore  Makefile.am  client.c  client.h  client_state.c  client_state.h  configure.ac  deque.c  deque.h  edge_list.c  edge_list.h  game.h  hash_map.c  hash_map.h  image_io.c  image_io.h  ipc.c  ipc.h  linear.c  linear.h  logger.c  logger.h  main.c  memory.c  memory.h  path.c  path.h  program.c  program.h  protocol.c  protocol.h  random.c  random.h  render.c  render.h  resource.c  resource.h  serialization.c  serialization.h  server.c  (+15 more)
resources/labels/en/: common.yaml
