#
# Template for top level makefile
#

noinst_PROGRAMS=game

game_SOURCES=client.c client_state.c deque.c edge_list.c hash_map.c main.c image_io.c ipc.c linear.c logger.c memory.c program.c protocol.c random.c render.c server.c server_state.c settings.c signal_utils.c status.c thread_utils.c unicode.c voronoi.c
